@@ -1,0 +1,8 @@
+{
+  "values": [
+    {
+      "id": "enigmaticlegacy:extradimensional_eye",
+      "required": false
+    }
+  ]
+}
