@@ -101,10 +101,14 @@
   "trait.l2hostility.moonwalk.desc": "减少周围区域重力",
   "trait.l2hostility.reprint": "复印",
   "trait.l2hostility.reprint.desc": "目标装备附魔点数每有1点，怪物伤害提升%s。近战复制所有装备附魔。x级附魔提供2^x附魔点数",
+  "trait.l2hostility.arena": "领域",
+  "trait.l2hostility.arena.desc": "区域内玩家无法放置方块",
   "effect.l2hostility.gravity": "重力",
   "effect.l2hostility.gravity.description": "增加生物重力",
   "effect.l2hostility.moonwalk": "月步",
   "effect.l2hostility.moonwalk.description": "减少生物重力",
+  "effect.l2hostility.antibuild": "领域压制",
+  "effect.l2hostility.antibuild.description": "玩家无法放置方块",
   "enchantment.l2hostility.insulator": "绝缘",
   "enchantment.l2hostility.insulator.desc": "减少词条效果对你施加的推挤或者拉扯",
   "enchantment.l2hostility.split_suppressor": "分裂抑制",
@@ -251,9 +255,5 @@
   "advancements.l2hostility.advancements.hostility.sloth.description": "获得怠惰诅咒",
   "advancements.l2hostility.advancements.hostility.sloth.title": "我想休息一下",
   "advancements.l2hostility.advancements.hostility.trait.description": "获得一个词条物品",
-  "advancements.l2hostility.advancements.hostility.trait.title": "新世界的大门",
-  "effect.l2hostility.antibuild": "Antibuild",
-  "effect.l2hostility.antibuild.description": "Make player cannot place block.",
-  "trait.l2hostility.arena": "Arena",
-  "trait.l2hostility.arena.desc": "Players around it cannot place blocks"
+  "advancements.l2hostility.advancements.hostility.trait.title": "新世界的大门"
 }
