@@ -106,8 +106,8 @@
 	"moonwalk.desc": "减少周围区域重力",
 	"reprint": "复印",
 	"reprint.desc": "目标装备附魔点数每有1点，怪物伤害提升%s。近战复制所有装备附魔。x级附魔提供2^x附魔点数",
-	"l2hostility.arena": "领域",
-	"l2hostility.arena.desc": "区域内玩家无法放置方块"
+	"arena": "领域",
+	"arena.desc": "区域内玩家无法放置方块"
   },
   "effect.l2hostility": {
 	"gravity": "重力",
